fixed spacing issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -126,7 +126,9 @@ a:focus {
 
 }
 @media (max-width: 400px) {
-
+.container-inner {
+  position: relative;
+}
 
 }
 
